# DataWarehouse

./: .gitignore  .globalconfig  .sync-over-async-summary.md  .temp-feature-scan.ps1  BannedSymbols.txt  DataWarehouse.sln  DataWarehouse.slnx  Directory.Build.props  Plugin Readme.txt  Project Structure.txt  Run-Audits.ps1  SDK_REFACTOR_PLAN.md  T112-T113-Implementation-Summary.md  TEST_COVERAGE_SUMMARY.md  TODO-DIAMOND-LEVEL.md  build-output.txt  fix-all-connectors.ps1  fix-connectors.ps1  fix-connectors2.ps1  fix-properties-nullability.ps1  fix_all_nullability.py  fix_connectors.py  fix_critical_errors.py  fix_indentation.py  fix_nullability.py  fix_remaining_errors.py  fix_syntax_errors.py
.claude/: settings.json  settings.local.json
.omc/: SECURITY-FIXES-FILES.txt  SECURITY-FIXES-SUMMARY.md  fix-plan.md  fix-summary.md  security-fixes-todo.md  ultrawork-state.json  v4.2-implementation-summary.md
.planning/: ADAPTIVE-SCALING-ANALYSIS.md  ARCHITECTURE-AUDIT.md  ARCHITECTURE_DECISIONS.md  CERTIFICATION-AUDIT.md  INTELLIGENCE-AWARE-PROPOSAL.md  MILESTONES.md  PLUGIN-CATALOG.md  PROJECT.md  REQUIREMENTS-v3.md  REQUIREMENTS.md  RESUME-STATE.md  ROADMAP.md  STATE.md  add-strategybase.ps1  config.json  domain-15-hardening-summary.md  fix-hierarchy.ps1  fix_all_remaining.py  fix_all_remaining2.py  fix_bounded_dict_errors.py  fix_ca1829_linecol.py  fix_count_errors.py  fix_count_method_groups.py  fix_final_errors.py  fix_getadd_nullability.py  fix_httpclient_timeout.py  fix_linq_count.py  (+24 more)
Clients/rust/: Cargo.toml
Clients/rust/src/: client.rs  error.rs  lib.rs  s3.rs
(+12563 files in other folders)
