[package]
name = "dw-client"
version = "5.0.0"
edition = "2021"
description = "DataWarehouse Universal Storage Client for Rust"
license = "MIT"
readme = "README.md"
repository = "https://github.com/datawarehouse/dw-client-rust"
keywords = ["datawarehouse", "s3", "storage", "client"]
categories = ["api-bindings", "filesystem"]

[dependencies]
aws-sdk-s3 = "1.0"
aws-config = "1.0"
aws-credential-types = "1.0"
aws-smithy-runtime-api = "1.0"
aws-smithy-types = "1.0"
tokio = { version = "1", features = ["full"] }
thiserror = "1.0"
url = "2.5"
